counterapp_deploy.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: counterapp
  labels:
    app: counterapp
  namespace: counterapp
spec:
  replicas: 3
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: counterapp
        tier: frontend
    spec:
      containers:
      - image: ingress.k8s-1.local/chunha/counterapp:0.0.1
        name: counterapp
        imagePullPolicy: Always
        resources:
          limits:
            memory: "128Mi"
            cpu: "200m"
          requests:
            memory: "64Mi"
            cpu: "100m"
  strategy:
  # indicate which strategy we want for rolling update
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
