ingress-grafana.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: prometheus-grafana
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/add-base-url: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
#    nginx.ingress.kubernetes.io/secure-backends: "true"
  namespace: monitoring
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: prometheus-grafana
          servicePort: 80
        path: /grafana
